-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.0.0-beta1
-
Ubuntu 15.10 64 bit
-
a615176a0cd2e48b95de189316b48257af1e99d4
- Create a new Qt Quick UI project.
I use this as an example. The symptoms are mostly the same for a Qt Quick Application. - Run this in the debugger.
- If you see a warning because of QTCREATORBUG-15829, close it with "OK".
- Open the Debugger Console.
- In Locals and Expressions view, select an item, e.g. the Text item.
The Debugger Console will show "Context: Text". - Type "text" into the Debugger Console and press Enter.
The Debugger Console will write: "The application has to be paused in order to evaluate expressions". Creator 3.6 had displayed the value of the the text property. - Do as you're told, pause the application.
- Type "text" into the Debugger Console and press Enter.
The Debugger Console will write: "Cannot evaluate text. The stack trace is broken."
So you can't access properties using the Debugger Console anymore, neither when the application is running nor when it is paused. In addition, the error message in step 6 is wrong.
It should be possible again to access the properties in QML items using the Debugger Console.
Found by Squish test tst_qml_js_console.
- depends on
-
QTCREATORBUG-15806 [REG 3.6 -> 4.0] Debugger does not stop at breakpoint in QML
-
- Closed
-
- relates to
-
QTCREATORBUG-15839 change content in locals & watchers broken during js debug
-
- Closed
-
-
QTCREATORBUG-16300 [REG 3.6 -> 4.0] Live QML/JS console no longer working
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-15831 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 152401,2 | Debugger: Adjust error message for Qml Debugger Console | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 154564,3 | Squish: Disable testing QmlJS console | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 155733,2 | Debugger: Remove 'Context' label in debugger console | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 183575,2 | Squish: Enable tst_qml_js_console again | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |